--- a/__SkillsShowcaseWebsite/IndependentProjectV2.0/css/particles.css
+++ b/__SkillsShowcaseWebsite/IndependentProjectV2.0/css/particles.css
@@ -1,41 +1,91 @@
+/*Import for Pasrticles.js*/
 * {
   box-sizing: border-box;
   background-attachment: fixed;
 
 }
-
 html,
 body {
   margin: 0;
   top: 0;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
-
 body {
   background-color: #000000;
   background-position: fixed;
+  height: 100vh;/*https://stackoverflow.com/questions/11516291/css-get-height-of-screen-resolution*/
+  width:  100vw;/*https://stackoverflow.com/questions/11516291/css-get-height-of-screen-resolution*/
+
 }
+
+
+/*Container & Layout Formatters*/
 /*https://css-tricks.com/how-to-stack-elements-in-css/*/
+.parent {
+  position: relative;
+}
 .child{
   position: absolute;
   top: 0;
-  margin-left: 7%;
-  margin-right: 7%;
-  max-width: max-content;
-  padding-top: 30px;
+  width: fill;
   align-self: center;
 }
-.containerBig{
+.containerBigTop{
   background: transparent;
-    margin-left: 7%;
-  margin-right: 7%;
-  max-width: max-content;
-  padding-top: 30px;
-  align-self: center;
-  
+  margin-left: 10vw;
+  margin-right: 10vw;
+  row-gap: 10px;
+  padding-top: 50px;
+}
+.containerBig{
+  position: absolute;
+  background: transparent;
+  margin-left: 10vw;
+  margin-right: 10vw;
+  row-gap: 10px;
 }
 .container{
   background: #141414;
 }
-.parent {
-  position: relative;
+/*https://css-tricks.com/quick-css-trick-how-to-center-an-object-exactly-in-the-center/*/
+.centeredTop{
+  position: absolute;
+  top: 15vh;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
+/*https://css-tricks.com/quick-css-trick-how-to-center-an-object-exactly-in-the-center/*/
+.centered{
+  position: -webkit-sticky;
+  top: 5vh;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+
+
+
+/*Text Formatters*/
+header{
+  margin-top: 7px;
+  border-bottom: 8px ridge rgb(255, 238, 0);
+  color: rgb(255, 238, 0);
+  font-size: 30px;
+}
+p{
+  margin-top: 10px;
+  padding: 5px;
+  color: white;
+  font-size: 18px;
+  text-indent: 12px;
+}
+h1{
+  color: #7c7c7c;
+}
+
+
+
+
+
+
