--- a/__SkillsShowcaseWebsite/IndependentProjectV2.0/css/particles.css
+++ b/__SkillsShowcaseWebsite/IndependentProjectV2.0/css/particles.css
@@ -13,12 +13,15 @@ body {
 }
 body {
   background-color: #000000;
-  background-position: fixed;
+  background-position: absolute;
   height: 100vh;/*https://stackoverflow.com/questions/11516291/css-get-height-of-screen-resolution*/
   width:  100vw;/*https://stackoverflow.com/questions/11516291/css-get-height-of-screen-resolution*/
 
 }
 
+canvas{
+  background-size: cover;
+}
 
 /*Container & Layout Formatters*/
 /*https://css-tricks.com/how-to-stack-elements-in-css/*/
@@ -32,10 +35,12 @@ body {
   align-self: center;
 }
 .containerBigTop{
+  position: scroll;
   background: transparent;
   margin-left: 10vw;
   margin-right: 10vw;
   row-gap: 10px;
+  margin-top: 35vh;
   padding-top: 50px;
 }
 .containerBig{
